@@ -4,6 +4,11 @@ Obnam NEWS
 
 This file summarizes changes between releases of Obnam.
 
+Version X.Y, released UNRELEASED
+--------------------------------
+
+* Even more detailed progress reporting during a backup.
+
 Version 1.3, released 2012-12-16
 --------------------------------
 
